--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
-1. Crear un repositorio
-git@github.com:Inma-qg/prueba_github_pages.git
-2 Clonar el repositorio en mi máquina local
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Publicamos un sitio web en GitHub Pages</title>
+</head>
+<body>
+    <header>
+        <h1>Cómo publicar un sitio web en GitHub Pages</h1>
+    </header>
+    <nav>
+
+    </nav>
+    <section>
+        <article>
+            <h2>1. Crear repositorio en GitHub</h2>
+        </article>
+        <article>
+            <h2>2. Clonar el repositorio en mi máquina local</h2>
+        </article>
+        <article>
+            <h2>3. Desarrollar el proyecto web estática</h2>
+            <h3>3.1. Trabajamos en una rama de desarrollo</h3>
+        </article>
+        <article>
+            <h2>4. Subir a GitHub</h2>
+        </article>
+        <article>
+            <h2>5. Activar GitHub Pages</h2>
+            <h3>5.1. Establecer la rama main como rama de producción/publicación</h3>
+        </article>
+        <article>
+            <h2>6. Acceder al sitio web</h2>
+        </article>
+    </section>
+</body>
+</html>
